started working on app.js

--- a/index.html
+++ b/index.html
@@ -1,20 +1,42 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Market Analysis App - Ivan Limongan
+    <title>Market Analysis App - Ivan Limongan</title>
+      <meta name="viewport" content="width=device-width, initial-scale=1">
+      <link href="//fonts.googleapis.com/css?family=Raleway:700,600,500,400,300,200" rel="stylesheet" type="text/css">
+
+      <!-- Cite Skeleton and Normalize from: www.getskeleton.com & normalize.css v3.0.2 | MIT License | git.io/normalize -->
+      <link type="text/css" rel="stylesheet" href="css/normalize.css">
+      <link type="text/css" rel="stylesheet" href="css/skeleton.css">
+
+      <link type="text/css" rel="stylesheet" href="style.css">
+      <link type="text/css" rel="stylesheet" href="layout.css">
   </head>
   <body>
 
-    <header>
-      <h1>Market Analysis App</p>
+    <header class="container">
+      <div class="row">
+        <div class="tweleve columns">
+          <h1>Market Analysis App</p>
+        </div>
+      </div>
     </header>
 
-    <div>
-      <h2>Click on the product that you would be most likely want to buy.</h2>
-      <hr>
-      <img src="" class="pick">
-      <img src="" class="pick">
-      <img src="" class="pick">
+    <div class="container">
+      <div class="row">
+        <div class="tweleve columns">
+          <h3>Click on the product that you would be most likely want to buy.</h3>
+          <hr>
+        </div>
+      </div>
+    </div>
+
+    <div id="imageDiv" class="container">
+      <div class="row">
+        <img src="" id="img1" class="one-third column">
+        <img src="" id="img2" class="one-third column">
+        <img src="" id="img3" class="one-third column">
+      </div>
     </div>
 
     <script src="js/app.js"></script>
