--- a/index.html
+++ b/index.html
@@ -39,6 +39,14 @@
       </div>
     </div>
 
+    <div class="container">
+      <div class="row">
+        <div id="result" class="tweleve columns">
+
+        </div>
+      </div>
+    </div>
+
     <script src="js/app.js"></script>
 
   </body>
