adjusted the click function

--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
   <head>
     <title>Market Analysis App - Ivan Limongan</title>
       <meta name="viewport" content="width=device-width, initial-scale=1">
-      <link href="//fonts.googleapis.com/css?family=Raleway:700,600,500,400,300,200" rel="stylesheet" type="text/css">
+      <link href="https://fonts.googleapis.com/css?family=Raleway:700,600,500,400,300,200" rel="stylesheet" type="text/css">
 
       <!-- Cite Skeleton and Normalize from: www.getskeleton.com & normalize.css v3.0.2 | MIT License | git.io/normalize -->
       <link type="text/css" rel="stylesheet" href="css/normalize.css">
       <link type="text/css" rel="stylesheet" href="css/skeleton.css">
 
-      <link type="text/css" rel="stylesheet" href="style.css">
-      <link type="text/css" rel="stylesheet" href="layout.css">
+      <link type="text/css" rel="stylesheet" href="css/style.css">
+      <link type="text/css" rel="stylesheet" href="css/layout.css">
   </head>
   <body>
 
@@ -18,18 +18,13 @@
       <div class="row">
         <div class="tweleve columns">
           <h1>Market Analysis App</p>
+          <h4>Click on the product that you would be most likely want to buy.</h4>
+          <hr>
         </div>
       </div>
     </header>
 
-    <div class="container">
-      <div class="row">
-        <div class="tweleve columns">
-          <h3>Click on the product that you would be most likely want to buy.</h3>
-          <hr>
-        </div>
-      </div>
-    </div>
+
 
     <div id="imageDiv" class="container">
       <div class="row">
@@ -41,8 +36,9 @@
 
     <div class="container">
       <div class="row">
-        <div id="result" class="tweleve columns">
-
+        <div class="tweleve columns">
+          <hr>
+          <button id="showResults" hidden="true" class="button-primary">Show Results</button>
         </div>
       </div>
     </div>
