--- a/index.html
+++ b/index.html
@@ -16,9 +16,10 @@
 
     <header class="container">
       <div class="row">
-        <div class="tweleve columns">
+        <div class="tweleve columns center">
           <h1>Market Analysis App</p>
-          <h4>Click on the product that you would be most likely want to buy.</h4>
+          <h5>Click on the product that you would be most likely want to buy.</h5>
+          <div id="counterText" class="row">You can view the results after 15 votes. Vote Counter:</div>
           <hr>
         </div>
       </div>
@@ -32,13 +33,17 @@
         <img src="" id="img2" class="one-third column">
         <img src="" id="img3" class="one-third column">
       </div>
+
     </div>
 
     <div class="container">
       <div class="row">
-        <div class="tweleve columns">
+        <div class="tweleve columns center">
           <hr>
           <button id="showResults" hidden="true" class="button-primary">Show Results</button>
+          <div id="displayResults" hidden="true"> </div>
+
+
         </div>
       </div>
     </div>
