everything working for this class 10 assignment. results show product and number clicked

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       <div class="row">
         <div class="tweleve columns center">
           <hr>
-          <button id="showResults" hidden="true" class="button-primary">Show Results</button>
+          <button id="showResults" hidden="true" class="button-primary">View Results</button>
           <div id="displayResults" hidden="true"> </div>
 
 
