--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="tweleve columns center">
           <h1>Market Analysis App</p>
           <h5>Click on the product that you would be most likely want to buy.</h5>
-          <div id="counterText" class="row">You can view the results after 15 votes. Vote Counter:</div>
+          <div id="counterText" class="row">Vote Counter:</div>
           <hr>
         </div>
       </div>
