--- a/index.html
+++ b/index.html
@@ -34,7 +34,6 @@
         <img src="" id="img2" class="one-third column">
         <img src="" id="img3" class="one-third column">
       </div>
-
     </div>
 
     <div class="container">
@@ -49,7 +48,10 @@
       </div>
     </div>
 
-    <script src="js/app.js"></script>
+    <div id="chartContainer">    </div>
+    <input type="button" value="Change Something" onclick="changeSomething()">
 
+    <script src="js/app.js"></script>
+    <script type="text/javascript" src="js/canvasjs.min.js"></script>
   </body>
 </html>
