--- a/index.html
+++ b/index.html
@@ -40,16 +40,18 @@
       <div class="row">
         <div class="tweleve columns center">
           <hr>
-          <button id="showResults" hidden="true" class="button-primary">View Results</button>
-          <div id="displayResults" hidden="true"> </div>
+          <!-- <button id="showResults" hidden="true" class="button-primary">View Results</button>
+          <div id="displayResults" hidden="true"> </div> -->
+          <input id="showResults" type="button" value="View Results" class="button-primary hidden">
 
 
         </div>
       </div>
     </div>
 
-    <div id="chartContainer">    </div>
-    <input type="button" value="Change Something" onclick="changeSomething()">
+    <div id="chartContainer" class="hidden">    </div>
+    <!-- <input id="showResults" type="button" value="View Results" hidden="true" class="button-primary"> -->
+    <!-- <input id="showResults" type="button" value="View Results" hidden="true" onclick="changeSomething()"> -->
 
     <script src="js/app.js"></script>
     <script type="text/javascript" src="js/canvasjs.min.js"></script>
