--- a/index.html
+++ b/index.html
@@ -26,8 +26,6 @@
       </div>
     </header>
 
-
-
     <div id="imageDiv" class="container">
       <div class="row">
         <img src="" id="img1" class="one-third column">
@@ -40,18 +38,12 @@
       <div class="row">
         <div class="tweleve columns center">
           <hr>
-          <!-- <button id="showResults" hidden="true" class="button-primary">View Results</button>
-          <div id="displayResults" hidden="true"> </div> -->
           <input id="showResults" type="button" value="View Results" class="button-primary hidden">
-
-
         </div>
       </div>
     </div>
 
-    <div id="chartContainer" class="hidden">    </div>
-    <!-- <input id="showResults" type="button" value="View Results" hidden="true" class="button-primary"> -->
-    <!-- <input id="showResults" type="button" value="View Results" hidden="true" onclick="changeSomething()"> -->
+    <div id="chartContainer" class="container hidden"></div>
 
     <script src="js/app.js"></script>
     <script type="text/javascript" src="js/canvasjs.min.js"></script>
