--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <div class="row">
         <div class="tweleve columns center">
           <br>
-          <h1>Market Analysis App</p>
+          <h1>Market Analysis App</h1>
           <h5>Click on the product that you would be most likely want to buy.</h5>
           <div id="counterText" class="row">Vote Counter:</div>
           <hr>
@@ -44,6 +44,15 @@
     </div>
 
     <div id="chartContainer" class="container hidden"></div>
+
+    <footer class="container">
+      <div class="row">
+        <div class="tweleve columns">
+          <hr>
+          <h6>Market Analysis App &mdash; Ivan Limongan / Code 201</h6>
+        </div>
+      </div>
+    </footer>
 
     <script src="js/app.js"></script>
     <script type="text/javascript" src="js/canvasjs.min.js"></script>
