updated index and css

--- a/index.html
+++ b/index.html
@@ -16,15 +16,25 @@
 
     <header class="container">
       <div class="row">
-        <div class="tweleve columns center">
+        <div class="one-half column">
           <br>
           <h1>Market Analysis App</h1>
+        </div>
+        <div class="one-half column">
+          <br>
           <h5>Click on the product that you would be most likely want to buy.</h5>
           <div id="counterText" class="row">Vote Counter:</div>
-          <hr>
         </div>
       </div>
     </header>
+
+    <div class="container">
+      <div class="row">
+        <div class="tweleve columns center">
+          <hr>
+        </div>
+      </div>
+    </div>
 
     <div id="imageDiv" class="container">
       <div class="row">
