css transformation on images

--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
 
     <div id="imageDiv" class="container">
       <div class="row">
-        <img src="" id="img1" class="one-third column">
-        <img src="" id="img2" class="one-third column">
-        <img src="" id="img3" class="one-third column">
+        <img src="" id="img1" class="one-third column up">
+        <img src="" id="img2" class="one-third column up">
+        <img src="" id="img3" class="one-third column up">
       </div>
     </div>
 
