local storage working and reset button added to clear storage

--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
         <div class="tweleve columns center">
           <hr>
           <input id="showResults" type="button" value="View Results" class="button-primary hidden">
+          <input id="resetData" type="button" value="Clear Data" class="button-primary hidden">
         </div>
       </div>
     </div>
